--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,6 @@ video {
 
 .join {
   background-color: #221f20;
-  max-width: 1280px;
   height: 120px;
   margin: 0 auto;
 }
@@ -111,4 +110,124 @@ video {
 
 .share-button .text {
   width: 180px;
+}
+
+.sm-item {
+  display: none;
+}
+
+.sm-menu {
+  display: none;
+  position: absolute;
+  top: 84px;
+  left: 0;
+  width: 100%;
+  background-color: #221f20;
+  padding: 10px 0;
+  z-index: 9999;
+}
+
+.sm-menu-item {
+  display: block;
+  text-align: center;
+  color: #ffffff;
+  font-size: 24px;
+  text-decoration: none;
+  padding: 10px;
+}
+
+.sm-menu-item:hover {
+  opacity: 0.8;
+}
+
+.bg-home {
+  background-color: #fcfdfb;
+}
+.bg-tvc {
+  background-color: #221f20;
+}
+
+.bg-buy {
+  position: relative;
+}
+
+.buy-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 863px;
+  background-color: #fcfdfb;
+}
+
+.buy-overlay::after {
+  content: "";
+  position: absolute;
+  top: 863px;
+  left: 0;
+  width: 100%;
+  height: 800px;
+  background-color: #ff5a35;
+}
+
+.bg-join {
+  position: relative;
+}
+
+.join-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 1958px;
+  background-color: #221f20;
+}
+
+.join-overlay::after {
+  content: "";
+  position: absolute;
+  top: 1958px;
+  left: 0;
+  width: 100%;
+  height: 699px;
+  background-color: #fcfdfb;
+}
+
+.bg-game {
+  background-color: #fcfdfb;
+}
+
+.contact-link {
+  cursor: pointer;
+}
+
+.bar {
+  display: none;
+}
+
+@media (max-width: 1145px) {
+  .menu {
+    font-size: 20px;
+  }
+}
+@media (max-width: 820px) {
+  .menu-item {
+    display: none;
+  }
+
+  .sm-item {
+    display: block;
+    margin-left: auto;
+    margin-right: 15px;
+  }
+
+  .bar {
+    display: block;
+    width: 24px;
+    filter: invert(1);
+  }
+
+  .sm-menu {
+    display: block;
+  }
 }
